@@ -1,3 +1,7 @@
+2003-05-17  Bradley Bell  <btb@icculus.org>
+
+	* include/cfile.h: correct seek return value
+
 2003-05-16  Bradley Bell  <btb@icculus.org>
 
 	* main/config.c, main/playsave.c: use physfs to write
